move list to folder

--- a/src/linked-list/tsconfig.json
+++ b/src/linked-list/tsconfig.json
@@ -10,6 +10,6 @@
     "declarationMap": true,
     "moduleResolution": "bundler"
   },
-  "include": ["test"],
+  "include": ["src", "test"],
   "exclude": ["node_modules"]
 }
